syntax = "proto3";

import "api/data.proto";

option go_package = "proto/api/service";

service WebService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
  }
}

message GetUserRequest {
}

message GetUserResponse {
  User user = 1;
}
